--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@ THE SOFTWARE.
 
 </script>
 
-<script type="text/x-red" data-help-name="wemo-emulator">
+<script type="text/x-red" data-help-name="hs100">
 
 </script>
