--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ THE SOFTWARE.
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
     <div class="form-row">
-        <label for="node-input-host"><i class="icon-tag"></i>Host Address</label>
+        <label for="node-input-host"><i class="icon-tag"></i>TP-LINK Switch IP Address</label>
         <input type="text" id="node-input-host" placeholder="">
     </div>
 
