--- a/index.html
+++ b/index.html
@@ -55,5 +55,20 @@ THE SOFTWARE.
 </script>
 
 <script type="text/x-red" data-help-name="hs100">
+<h1>node-red-contrib-hs100</h1>
+
+<p>This Node-RED node is for controlling tp-link Wi-Fi Smart Plug - Model HS100.</p>
+
+<p>This node has only been tested with a HS100(UK). The HS100 is also available in US and EU plug versions. We expect they will work too.</p>
+
+<p>This node simply wraps the excellent work here <a href="https://github.com/czjs2/hs100-api">https://github.com/czjs2/hs100-api</a>. </p>
+
+<h1>Configuration</h1>
+
+<p>Drag this node on to a worksheet and double click it. Enter the IP address of the plug on your network. Save and deploy.</p>
+
+<p>To turn the HS100 on, send a message a message with the topic or payload set to <code>on</code>.</p>
+
+<p>To turn the HS100 off, send a message a message with the topic or payload set to <code>off</code>.</p>
 
 </script>
